# kube-cerberus

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  validating_examples.py
.github/workflows/: test.yml
kube_cerberus/: __init__.py  cli.py  registry.py  validator.py  webhook_config.py
tests/integration_tests/: __init__.py  admission_webhook_test.py  conftest.py  webhook_server.py
tests/integration_tests/scripts/: setup_kind.sh  teardown_kind.sh
tests/unit_tests/: __init__.py  registry_test.py  todo_features_test.py  validator_test.py
