[project]
name = "kube-cerberus"
version = "0.1.0"
description = "Kubernetes admission framework in python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core admission validation has no external dependencies
]

[project.scripts]
cerberus = "kube_cerberus.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pdbpp>=0.10.0",
]
integration = [
    "kubernetes>=28.1.0",  # Kubernetes Python client
    "requests>=2.31.0",    # HTTP requests for testing
    "cryptography>=41.0.0", # For generating test certificates
]
